...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="BYZ-38-t0r" id="cAZ-Sh-FtY"/>
                            <outlet property="delegate" destination="BYZ-38-t0r" id="A5r-QT-eJh"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Recipes" id="OTE-Dm-Qcf">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5SO-t5-GV6">
                            <connections>
                                <segue destination="X4H-Po-1pU" kind="show" id="QAm-5A-juD"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nbt-BE-wcf">
                                <rect key="frame" x="20" y="555" width="335" height="42"/>
                                <color key="backgroundColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="deviceRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="IFe-Ax-FEd"/>
                                </constraints>
                                <state key="normal" title="Add">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="addButton_click:" destination="X4H-Po-1pU" eventType="touchUpInside" id="EEU-Pd-py0"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2r-mj-Stu">
                                <rect key="frame" x="16" y="90" width="343" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="c66-tB-UtO"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
